# swagger_output.json
@@ -21,7 +21,7 @@
     "https"
   ],
   "paths": {
-    "/stop/next/{station}": {
+    "/stop/next/old/{station}": {
       "get": {
         "tags": [
           "Stop"
@@ -89,6 +89,38 @@
           },
           "404": {
             "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/stop/next/{station}": {
+      "get": {
+        "tags": [
+          "Stop"
+        ],
+        "summary": "Get next trams at a station. You can filter by line and destination.",
+        "description": "",
+        "parameters": [
+          {
+            "name": "station",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "line",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "destination",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
